--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "social media app",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon backend/server.js",
+    "start": "node backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Areeb Hashir",
